Closed Bug 1293572 Opened 8 years ago Closed 8 years ago

Flushing a decoder that is not initialized will hang

Categories

(Firefox for Android Graveyard :: Audio/Video, defect, P3)

defect

Tracking

(firefox51 fixed)

RESOLVED FIXED
Firefox 51
Tracking Status
firefox51 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

Attachments

(1 file)

Found this bug when testing suspend/resume reader. https://hg.mozilla.org/mozilla-central/file/e78975b53563d80c99ebfbdf8a9fbf6b829a8a48/dom/media/MediaFormatReader.cpp#l466 When the reader is suspended, it is possible to flush a DecoderData::mDecoder which is created but not initialized and it turns out to hang on my Android device. We should create no decoders at all when the reader is suspended.
Assignee: nobody → jwwang
Blocks: 1292047
Depends on: 1278574
Priority: -- → P3
Component: Audio/Video: Playback → Audio/Video
Product: Core → Firefox for Android
Attachment #8779220 - Flags: review?(jyavenard)
Blocks: 1292453
No longer blocks: 1292047
Comment on attachment 8779220 [details] Bug 1293572 - Flushing a decoder that is not initialized causes hang. Don't create decoders when the reader is suspened. https://reviewboard.mozilla.org/r/70268/#review68004
Attachment #8779220 - Flags: review?(jyavenard) → review+
Thanks!
Pushed by jwwang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6b8517876729 Flushing a decoder that is not initialized causes hang. Don't create decoders when the reader is suspened. r=jya
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 51
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: