Bug 1293572 - Flushing a decoder that is not initialized causes hang. Don't create decoders when the reader is suspened. r=jya

MozReview-Commit-ID: 7ylrYLrrwIS